--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
   "homepage": "https://github.com/Etherealsad/express-mesto-gha#readme",
   "keywords": [],
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.6.5"
+    "helmet": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.5",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "^8.25.0",
@@ -31,4 +37,3 @@
     "nodemon": "^2.0.20"
   }
 }
-   
